--- a/BiotecFront/package.json
+++ b/BiotecFront/package.json
@@ -17,8 +17,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1",
-    "redux": "^5.0.1",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^6.26.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
