--- a/BiotecFront/package.json
+++ b/BiotecFront/package.json
@@ -15,10 +15,12 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.8.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
